Update ThreadRef.java